@@ -563,6 +563,16 @@
 *.tcl
 -syntax tcl
 
+ === TeX
+*.cls
+-syntax tex
+
+*.sty
+-syntax tex
+
+*.tex
+-syntax tex
+
  === Verilog
 *.v
 -syntax verilog
