@@ -1,0 +1,38 @@
+# $MirOS$
+#-
+# JOE syntax highlight file for minimal Teχ (no verbatim or math)
+
+-
+
+=Idle
+=Comment	green
+=Syntax		bold yellow
+=Keyword	bold white
+=Special	bold red
+
+:idle Idle
+	*		idle
+	"%"		comment		recolor=-1
+	"\\"		escape		recolor=-1
+	"~{}"		syntax		recolor=-1
+	"#&_$"		special		recolor=-1
+
+:comment Comment
+	*		comment
+	"\n"		idle
+
+:escape Idle
+	*		special		recolor=-2
+	"~{}#&_%$"	idle
+	"\\ "		syntax		recolor=-2
+	"a-zA-Z"	keyword		recolor=-2
+
+:keyword Keyword
+	*		idle		noeat
+	"a-zA-Z"	keyword
+
+:syntax Syntax
+	*		idle		noeat
+
+:special Special
+	*		idle		noeat
